calendar: Remove dead code in HTTP backend

The HTTP status cannot be SOUP_STATUS_SSL_FAILED inside the
SOUP_STATUS_IS_REDIRECTION block. Spotted by Coverity.

CID: #1296551

https://bugzilla.gnome.org/show_bug.cgi?id=749190